# LifeSimulation

./: .gclient  .gclient_entries  .gclient_previous_sync_commits  .gcs_entries  .gitignore  CMakeLists.txt  Test.md  compile_commands.json  imgui.ini
.cache/clangd/index/: _fixes.hpp.18E7C0969224E6D6.idx  _vectorize.hpp.79159944F8C3DBDC.idx  common.hpp.DEA5F27C45D50C9D.idx  compute_common.hpp.AD4A4C1CF446E8DA.idx  compute_vector_decl.hpp.F104EA5C850CCAAD.idx  compute_vector_relational.hpp.4FD79AA21C4ACEF1.idx  constants.hpp.042BDFC6774ACE4E.idx  constants.inl.D913CD29EE60455E.idx  epsilon.hpp.1186AB2636E446FC.idx  epsilon.inl.4E4C447DE9352B89.idx  exponential.hpp.56CF38B70571A21F.idx  fps_counter.cpp.595AAE87ECBD4BD0.idx  fps_counter.h.434152EFEB7951A8.idx  func_common.inl.37C9F088B03466BC.idx  func_exponential.inl.7A596CBDCA9EA36F.idx  func_geometric.inl.85C763965A20694F.idx  func_integer.inl.D4A42A3F7E1B0E79.idx  func_matrix.inl.14EF2F891FAEBA0E.idx  func_packing.inl.41D3C5986CA5CBE2.idx  func_trigonometric.inl.AF8AEA4321CDC6E1.idx  func_vector_relational.inl.B67A59C6718F8D12.idx  fwd.hpp.81A329B2005A2F73.idx  geometric.hpp.CFA019BA3C7290FF.idx  glad.c.87CBC33FB572D16F.idx  glad.h.E048EC4F30DB03F4.idx  glm.hpp.F10609F28E8F39A0.idx  gui.cpp.EAE3BDFC9E29C3CE.idx  gui.h.EAFEE9147CAD7AD0.idx  imconfig.h.2FD02FB8DE496996.idx  imgui.cpp.7AC827536CB15F83.idx  imgui.h.77F45E76307A90BB.idx  imgui_demo.cpp.B2946C44B7FFCBBB.idx  imgui_draw.cpp.B580B8B5E9EC97C0.idx  imgui_impl_opengl3.cpp.083CF33867ED6570.idx  imgui_impl_opengl3.h.54B63BD77970C6F1.idx  imgui_impl_opengl3_loader.h.D4F2DCE087E44CBB.idx  imgui_impl_sdl3.cpp.3411973AB1F9C22C.idx  imgui_impl_sdl3.h.A88F15C6D2DF50A4.idx  imgui_internal.h.2EAB0AAEFC46B8D7.idx  imgui_tables.cpp.0A5B150DF7E27246.idx  (+172 more)
.cipd/: tagcache.db
.cipd/pkgs/0/: _current  description.json
.cipd/pkgs/0/ESLFkuSeokgP6DES380bv_BrSCIf8pcQrehufOXNwuQC/.cipdpkg/: manifest.json
.cipd/pkgs/1/: description.json
.cipd/pkgs/2/: description.json
.cipd/pkgs/3/: description.json
.cipd/pkgs/4/: _current  description.json
.cipd/pkgs/4/vKkcLENtlRP2VOlFXKIO1SHZOBEdA5CguM1YhpfgHH8C/.cipdpkg/: manifest.json
src/: Common.cpp  Common.h  main.cpp
src/DataStruct/: OptimisedQuadtree.h  Quadtree.h
src/GUI/: gui.cpp  gui.h
src/Graphics/: App.cpp  App.h  Particle.cpp  Particle.h  ParticleSystem.cpp  ParticleSystem.h  Simulation.cpp  Simulation.h  renderer.cpp  renderer.h  shader.cpp  shader.h
src/Graphics/Shaders/: EmbeddedShaders.h
src/Graphics/shaders/: particle.frag  particle.frag.wgsl  particle.vert  particle.vert.wgsl  particle_compute.glsl  shader2D.frag  shader2D.frag.wgsl  shader2D.vert  shader2D.vert.wgsl
src/core/: fps_counter.cpp  fps_counter.h  system_utils.h  window.cpp  window.h
